--- a/appspec.yml
+++ b/appspec.yml
@@ -6,15 +6,14 @@ files:
     destination: /home/ec2-user/kite_traders
 hooks:
   ApplicationStop:
-    - location: bloomstrade/application_stop.sh
+    - location: application_stop.sh
       timeout: 10
       runas: ec2-user
   BeforeInstall:
-    - location: bloomstrade/before_install.sh
+    - location: before_install.sh
       timeout: 10
       runas: ec2-user
   ApplicationStart:
-    - location: bloomstrade/application_start.sh
+    - location: application_start.sh
       timeout: 10
       runas: ec2-user
-      
