--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,6 @@ hooks:
       timeout: 10
       runas: ec2-user
   ApplicationStart:
-    - location: application_start.sh
+    - location: run.sh
       timeout: 10
       runas: ec2-user
