--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,6 @@ hooks:
       timeout: 100
       runas: ec2-user
   ApplicationStart:
-    - location: run.sh
+    - location: ./run.sh
       timeout: 100
       runas: ec2-user
