--- a/appspec.yml
+++ b/appspec.yml
@@ -17,3 +17,7 @@ hooks:
     - location: ./run.sh
       timeout: 100
       runas: ubuntu
+  ValidateService:
+    - location: scripts/validate_service.sh
+      timeout: 100
+      runas: ubuntu
